--- a/assets/styles/css/content.css
+++ b/assets/styles/css/content.css
@@ -45,7 +45,7 @@ button {
   border: 3px solid rgb(0, 0, 81);
   border-radius: 18px;
   transition: 0.5s;
-
+  cursor: pointer;
 }
 
 button:hover {
@@ -66,4 +66,48 @@ button:active {
   display: flex;
   flex-direction: row;
   margin-bottom: 70px;
+}
+
+.work-card {
+  margin: 35px auto;
+  padding: 25px 0 25px 0;
+  background-color: white;
+  border-radius: 10px;
+  width: 300px;
+  height: 375px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid rgb(0, 0, 81);
+  box-shadow: 0 0 30px rgb(0, 0, 81);
+} 
+
+.work-logo {
+  width: 200px;
+  height: 175px;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.work-description {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.visit-button {
+  padding: 2px 2px;
+  font-size: 14px;
+  height: 30px;
+  width: 192px;
+}
+
+.visit-button:hover {
+  padding: 2px 2px;
+  font-size: 14px;
+  height: 30px;
+  width: 192px;
+  color: white;
 }
