--- a/assets/styles/css/content.css
+++ b/assets/styles/css/content.css
@@ -3,6 +3,10 @@ h1, h2 {
   font-size: 1.8em;
 }
 
+h3 {
+  margin: 15px 0;
+}
+
 p {
   display: inline;
   font-weight: 300;
@@ -68,12 +72,16 @@ button:active {
   margin-bottom: 70px;
 }
 
+.work-card-grid {
+  display: grid;
+  grid-template-columns: 1fr;
+}
+
 .work-card {
-  margin: 35px auto;
-  padding: 25px 0 25px 0;
+  margin: 35px 30px;
+  padding: 25px 0;
   background-color: white;
   border-radius: 10px;
-  width: 300px;
   height: 375px;
   display: flex;
   flex-direction: column;
@@ -91,12 +99,6 @@ button:active {
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
 }
 
-.work-description {
-  display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-
 .visit-button {
   padding: 2px 2px;
   font-size: 14px;
@@ -110,4 +112,79 @@ button:active {
   height: 30px;
   width: 192px;
   color: white;
+}
+
+.formation, 
+.experience, 
+.skills {
+  display: grid;
+  grid-template-columns: 180px 2fr;
+}
+
+.experience div {
+  padding: 5px 0;
+}
+
+hr {
+  margin: 20px;
+}
+
+.level-bar {
+  display: flex;
+  align-items: center;
+}
+
+.progress-container {
+  width: 100%;
+  position: relative;
+  border: 2px solid rgb(0, 0, 81);
+  border-radius: 4px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 15px;
+  padding: 0 2px;
+}
+
+.segment {
+  display: inline-block;
+  height: 7px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+  width: 19%;
+}
+
+.full {
+  background-color: rgb(0, 0, 81);
+}
+
+.empty {
+  border: 1px solid rgb(0, 0, 81);
+}
+
+@media only screen and (min-width:401px) and (max-width:960px) {
+  .work-card-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+
+  .formation, 
+  .experience, 
+  .skills {
+    display: grid;
+    grid-template-columns: 180px 1fr 1fr;
+  }
+}
+
+@media only screen and (min-width:961px) {
+  .work-card-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .formation, 
+  .experience, 
+  .skills {
+  display: grid;
+  grid-template-columns: 180px 1fr 180px 1fr;
+  }
 }
