--- a/assets/styles/css/header.css
+++ b/assets/styles/css/header.css
@@ -7,6 +7,7 @@ header {
   left: 0;
   right: 0;
   top: 0;
+  z-index: 500;
 }
 
 .left-section {
@@ -43,4 +44,3 @@ header {
   padding-right: 30px;
   height: 30px;
 }
-
