--- a/assets/styles/css/content.css
+++ b/assets/styles/css/content.css
@@ -1,19 +1,3 @@
-h1, h2 {
-  margin: 20px 0;
-  font-size: 1.8em;
-}
-
-h3 {
-  margin: 15px 0;
-}
-
-p {
-  display: inline;
-  font-weight: 300;
-  text-align: left;
-  line-height: 1.8em;
-}
-
 .presentation-photos {
   height: 170px;
   display: flex;
@@ -36,34 +20,6 @@ p {
 
 .paragraph {
   padding: 0px 5%;
-}
-
-button {
-  height: 50px;
-  padding: 5px 5px;
-  margin-right: 6px;
-  font-size: 11px;
-  font-weight: 500;
-  color: rgb(0, 0, 81);
-  background-color: rgba(0, 0, 0, 0);
-  border: 3px solid rgb(0, 0, 81);
-  border-radius: 18px;
-  transition: 0.5s;
-  cursor: pointer;
-}
-
-button:hover {
-  color: rgb(255, 189, 0);
-  height: 60px;
-  font-size: 13px;
-  font-weight: 700;
-  padding: 10px 10px;
-  background-color: rgba(0, 0, 81, 0.8);
-}
-
-button:active {
-  background-color: rgb(0, 0, 81);
-  transition: 0.15s;
 }
 
 .buttons {
@@ -115,18 +71,20 @@ button:active {
 }
 
 .formation, 
-.experience, 
+.experience {
+  display: grid;
+  grid-template-columns: 160px 1fr;
+  column-gap: 15px;
+  row-gap: 10px;
+}
+
 .skills {
   display: grid;
-  grid-template-columns: 180px 2fr;
+  grid-template-columns: 150px 2fr;
 }
 
-.experience div {
-  padding: 5px 0;
-}
-
-hr {
-  margin: 20px;
+.grid-skills {
+  display: grid;
 }
 
 .level-bar {
@@ -163,16 +121,19 @@ hr {
   border: 1px solid rgb(0, 0, 81);
 }
 
-@media only screen and (min-width:401px) and (max-width:960px) {
+@media only screen and (min-width:600px) and (max-width:960px) {
   .work-card-grid {
     grid-template-columns: 1fr 1fr;
   }
 
-  .formation, 
-  .experience, 
   .skills {
+    grid-template-columns: 150px 1fr;
+  }
+
+  .grid-skills {
     display: grid;
-    grid-template-columns: 180px 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 30px;
   }
 }
 
@@ -182,9 +143,18 @@ hr {
   }
 
   .formation, 
-  .experience, 
+  .experience {
+    display: grid;
+    grid-template-columns: 180px 2fr 180px 2fr;
+  }
+
   .skills {
-  display: grid;
-  grid-template-columns: 180px 1fr 180px 1fr;
+    grid-template-columns: 150px 1fr;
+  }
+
+  .grid-skills {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 30px;
   }
 }
