--- a/assets/styles/css/footer.css
+++ b/assets/styles/css/footer.css
@@ -1,6 +1,7 @@
 footer {
   height: 200px;
   background-color: rgb(0, 0, 81);
+  margin-left: -20px;
   padding-top: 20px;
   margin-top: 20px;
   color: white;
