--- a/assets/styles/css/general.css
+++ b/assets/styles/css/general.css
@@ -8,9 +8,63 @@ body {
   background-color:rgba(255, 189, 0, 0.7);
   color: rgb(0, 0, 81);
   padding-top: 120px;
+  margin-left: 220px;
 }
 
 strong {
   font-weight: 700;
 }
 
+h1, h2 {
+  margin: 20px 0;
+  font-size: 1.8em;
+}
+
+h3 {
+  margin: 15px 0;
+}
+
+p {
+  display: inline;
+  font-weight: 300;
+  text-align: left;
+  line-height: 1.8em;
+}
+
+button {
+  height: 50px;
+  padding: 5px 5px;
+  margin-right: 6px;
+  font-size: 11px;
+  font-weight: 500;
+  color: rgb(0, 0, 81);
+  background-color: rgba(0, 0, 0, 0);
+  border: 3px solid rgb(0, 0, 81);
+  border-radius: 18px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+button:hover {
+  color: rgb(255, 189, 0);
+  height: 60px;
+  font-size: 13px;
+  font-weight: 700;
+  padding: 10px 10px;
+  background-color: rgba(0, 0, 81, 0.8);
+}
+
+button:active {
+  background-color: rgb(0, 0, 81);
+  transition: 0.15s;
+}
+
+hr {
+  margin: 20px;
+}
+
+@media only screen and (max-width:961px) {
+  body {
+    margin-left: 0;
+  }
+}
