--- a/assets/styles/css/contact.css
+++ b/assets/styles/css/contact.css
@@ -33,3 +33,11 @@ input[type="submit"] {
 input[type="submit"]:hover {
   background-color: rgb(0, 0, 81)
 }
+
+@media only screen and (min-width:961px) {
+  form {
+    width: auto;
+    max-width: 700px;
+  }  
+}
+
