--- a/assets/styles/css/footer.css
+++ b/assets/styles/css/footer.css
@@ -2,11 +2,14 @@ footer {
   height: 200px;
   background-color: rgb(0, 0, 81);
   margin-left: -20px;
-  padding-top: 20px;
-  margin-top: 20px;
+  padding: 20px;
   color: white;
   display: flex;
   flex-direction: column;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 
 .upper-section,
