--- a/assets/styles/css/general.css
+++ b/assets/styles/css/general.css
@@ -22,7 +22,12 @@ strong {
   font-weight: 700;
 }
 
-h1, h2 {
+h1 {
+  margin: 15px 0;
+  font-size: 2.4em;
+}
+
+h2 {
   margin: 20px 0;
   font-size: 1.8em;
 }
